--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
       }
     </style>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>stationf</title>
+    <title>RecetteSite</title>
   </head>
   <body>
     <div id="app"></div>
